<resources>
    <string name="app_name">Eye Relaxer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- App messages -->
    <string name="welcome_message">Welcome to the Eye Relaxer.</string>
    <string name="fab_content_desc">Add new</string>

    <!-- Week days -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <!-- Card headlines -->
    <string name="notifications_schedule_headline">Your notification schedule:</string>
    <string name="title_activity_add_to_schedule">New notification</string>

    <!-- Buttons -->
    <string name="submit_btn">Submit</string>
</resources>
