<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TimePicker
            android:id="@+id/timePicker"
            app:layout_constraintTop_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:timePickerMode="clock"
            android:numbersSelectorColor="@color/colorPrimary"
            android:headerBackground="@color/colorPrimary"
            android:layout_gravity="center_horizontal"
            />

        <ScrollView
            android:id="@+id/checkboxes_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/basic_margin">

                <CheckBox
                    android:id="@+id/monday_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/monday">
                </CheckBox>
                <CheckBox
                    android:id="@+id/tuesday_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tuesday">
                </CheckBox>
                <CheckBox
                    android:id="@+id/wednesday_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wednesday">
                </CheckBox>
                <CheckBox
                    android:id="@+id/thursday_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thursday">
                </CheckBox>
                <CheckBox
                    android:id="@+id/friday_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/friday">
                </CheckBox>
                <CheckBox
                    android:id="@+id/saturday_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/saturday">
                </CheckBox>
                <CheckBox
                    android:id="@+id/sunday_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sunday">
                </CheckBox>

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/new_notification_submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:text="@string/submit_btn"
            android:textColor="@color/white"
            android:layout_margin="@dimen/basic_margin"
            android:layout_gravity="center_horizontal">
        </Button>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>